# ComfyUI_wan2.2_latentSaver

./: .gitignore  README.md  nodes.py  pyproject.toml
src/wan2_latent_saver/: nodes.py
